--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,13 @@
   padding: 1em 0px;
 }
 
+.overlay {
+  background: transparent;
+  position: relative;
+  width: 100%;
+  height: 200px;
+}
+
 
 .logo {
   width: 100px;
