--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,11 +2,8 @@
   padding: 1em 0px;
 }
 
-.overlay {
-  background: transparent;
-  position: relative;
-  width: 100%;
-  height: 200px;
+.map {
+  pointer-events: none;
 }
 
 
