--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -45,7 +45,7 @@
     width: 20px;
     height: 20px;
     position: absolute;
-    bottom: 60px;
+    top: 50%;
     font-weight: bold;
     border-radius: 10px;
   }
