--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,7 +7,7 @@
 }
 
 .logo {
-  width: 100px;
+  width: 60px;
   height: auto;
   display: inline-block;
 }
@@ -64,4 +64,9 @@
   .next {
     right: 5px;
   }
+}
+
+
+.socialIcons {
+  float: right;
 }
