added some styling

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,30 @@
+$metalBlue: #4D5EA6;
+$background: #EAECE7;
+$pGrey: #686A69;
+
+body {
+  background-color: $background;
+}
 .row  {
   padding: 1em 0px;
 }
 
+h1 {
+  color: $metalBlue;
+}
+h2 {
+  color: $metalBlue;
+  text-align: center;
+}
+p {
+  color: $pGrey;
+}
+button {
+  background-color: #E12C33;
+  color: white;
+  border-radius: 8px;
+  border-style: solid;
+}
 .map {
   pointer-events: none;
 }
@@ -69,4 +92,15 @@
 
 .socialIcons {
   float: right;
+}
+
+footer {
+  margin: 0;
+  text-align: center;
+  padding: 5px 0;
+  background-color: $metalBlue;
+  p {
+    color: $background;
+
+  }
 }
