--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,7 @@ p {
 
 .testimonialsOuter {
   background-color: #EAECE7;
+}
 
 button {
   background-color: #E12C33;
@@ -108,6 +109,5 @@ footer {
   background-color: $metalBlue;
   p {
     color: $background;
-
   }
 }
