--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -104,10 +104,58 @@ button {
 
 footer {
   margin: 0;
+  line-height: 20px;
   text-align: center;
   padding: 5px 0;
   background-color: $metalBlue;
   p {
     color: $background;
   }
+}
+
+.companyLogos {
+  width: 100%;
+}
+
+#canvas1 {
+  padding: 0px;
+}
+
+#modal {
+  background: white;
+
+  position: fixed;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  margin: -25% 0 0 -25%;
+  padding: 1em;
+
+  /* Embiggen */
+  transform: scale(1.5); /* prefix me */
+
+  /* Hidden */
+  opacity: 0;
+  pointer-events: none;
+}
+
+.dialogIsOpen #page-wrap {
+
+  /* Blur and de-color */
+  -webkit-filter: blur(5px) grayscale(50%);
+
+  /* Recede */
+  -webkit-transform: scale(0.9);
+
+}
+
+.dialogIsOpen #modal {
+
+  /* Regular size and visible */
+  transform: scale(1); /* prefix me */
+  opacity: 1;
+
+  /* Clickable */
+  pointer-events: auto;
+
 }
